fix tilt on mobile

--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@ body {
 ========================================= */
 .light {
   position: absolute;
-  width: 750px; /* Adjusted size for a more flashlight-like effect */
-  height: 750px;
+  width: 1000px; /* Adjusted size for a more flashlight-like effect */
+  height: 1000px;
   background: radial-gradient(circle, rgb(0, 0, 0), rgb(0, 0, 0) 1%);
   border-radius: 50%;
   pointer-events: none;
@@ -45,7 +45,7 @@ body {
   width: 100%;
   height: 100%;
   background: rgb(0, 0, 0, 1);
-  z-index: 1; /* Overlay is below the light but above the sections */
+  z-index: 2; /* Overlay is below the light but above the sections */
   pointer-events: none;
   transition: background 0.75s ease;
 }
@@ -96,8 +96,8 @@ section {
 }
 
 .content {
-  position: relative;
-  z-index: 2; /* Content is above the section background */
+  position: absolute;
+  z-index: 3; /* Content is above the section background */
   color: white;
   text-shadow: 5px 5px 20px rgb(255, 0, 140);
 }
@@ -106,7 +106,6 @@ section {
   background: url('circuit-board.png') no-repeat center center fixed;
   background-size: cover;
   filter: brightness(1);
-  z-index: 0; /* Ensure content is above the section background */
 }
 
 #section1 {
@@ -186,12 +185,7 @@ section {
   }
 
   .light {
-    width: 300px;
-    height: 300px;
-  }
-
-  .trail {
-    width: 250px;
-    height: 250px;
+    width: 500px;
+    height: 500px;
   }
 }
